--- a/Lab4/CountryApp/app/build.gradle
+++ b/Lab4/CountryApp/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation group: 'com.google.android.gms', name: 'play-services-maps', version: '16.1.0'
     implementation group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.android.support:gridlayout-v7:28.0.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
